Fixed Chat flowing off the screen on smaller screens

--- a/css/gameroom.css
+++ b/css/gameroom.css
@@ -3,7 +3,7 @@
 #game-room {
     max-width: 100%;
     max-height: 100vh;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 #left-column, #center-column, #right-column {
@@ -29,6 +29,7 @@
     background-color: #fff;
     z-index: 1;
     position: relative;
+    height: 10vh;
 }
 
 #title-row .panel-dark{
@@ -53,6 +54,7 @@
     border-width: 1px;
     border-color: #fff;
     position: relative;
+    height: 21.5vh;
 }
 
 #chat-log {
@@ -69,8 +71,9 @@
 }
 
 .chat-bar #chat-bar {
-    display: inline-block;
-    width: 90%;
+    height: 2.5vh;
+    padding: 0;
+    border: 1px solid #000;
     
 }
 
@@ -84,8 +87,13 @@
 
 #chat-form {
     background-color: #fff;
-    border-style: solid;
-    border-color: grey;
+    height: 3vh;
+}
+
+#chat-post {
+height: 100%;
+width: 100%;
+    margin: auto;
 }
 
 /*CHAT LOG CSS END ----------------------------------------------------*/
